--- a/src/App.css
+++ b/src/App.css
@@ -22,6 +22,10 @@
   justify-content: center;
 }
 
+.tableStyle {
+  width: 95%;
+  margin: 0 10px;
+}
 #searchBar {
   height: 8vh;
   width: 40vw;
