--- a/src/index.css
+++ b/src/index.css
@@ -5,7 +5,7 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-  background-image: linear-gradient(to bottom right, lightblue, white);
+  background-image: linear-gradient(to bottom right, lightblue, lightgrey);
   background-repeat: no-repeat;
   min-height: 100vh;
 }
